--- a/Number.html
+++ b/Number.html
@@ -22,7 +22,7 @@
 
 
     let t2 = performance.now();
-    normalSearch(arr,input);
+    binarySearch(arr,input);
     let t3 = performance.now();
     console.log("Call to normal search took " + (t3 - t2) + " milliseconds.");
 
